# analogdevicesummerschool

Aplication_Software/: CMakeLists.txt  app.py  main.cpp
EmbeddedSoft/: iio_ad5592r_s.c
hardware/: Pcb_practic.csv  Pcb_practic.kicad_pcb  Pcb_practic.kicad_prl  Pcb_practic.kicad_pro  Pcb_practic.kicad_sch  fp-info-cache  sym-lib-table
